--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 scrapy = "^2.11.2"
+pandas = "^2.2.3"
+openpyxl = "^3.1.5"
 
 
 [build-system]
